--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "image-webpack-loader": "^6.0.0",
     "markdown-it-anchor": "^5.2.5",
     "markdown-it-container": "^2.0.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-table-of-contents": "^0.4.4",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.3.1",
     "typescript": "^3.2.1",
     "vue-loader": "^15.7.1",
     "vue-markdown-loader": "^2.4.1",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
