--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "element-ui": "^2.12.0",
     "highlight.js": "^9.15.10",
     "markdown-it": "^10.0.0",
+    "style-resources-loader": "^1.3.3",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
