--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bpmn-js": "^8.2.0",
+    "bpmn-js-properties-panel": "^0.39.0",
+    "camunda-bpmn-moddle": "^4.5.0",
     "element-ui": "^2.12.0",
     "highlight.js": "^9.15.10",
     "lyt_scroll": "^1.1.3",
     "markdown-it": "^10.0.0",
+    "raw-loader": "^4.0.2",
     "style-resources-loader": "^1.3.3",
     "vue": "^2.6.6",
+    "vue-bpmn": "^0.2.2",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.1",
